--- a/PocOData/Views/Home/Index.cshtml
+++ b/PocOData/Views/Home/Index.cshtml
@@ -1,24 +1,30 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+﻿<div>
+    <table>
+        <thead>
+        <tr><th>Id</th><th>Title</th><th>Locked</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th></tr>
+        </thead>
+        <tbody data-bind="foreach: movies">
+        <tr>
+            <td data-bind="text: id"></td>
+            <td data-bind="text: title"></td>
+            <td data-bind="text: dueDate"></td>
+            <td><input type="button" value="Check Out" data-bind="click: checkout, enable: checkoutUrl" /></td>
+            <td><input type="button" value="Return" data-bind="click: returnMovie, enable: returnMovieUrl" /></td>
+            <td><input type="checkbox" data-bind="checked: selected" /></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
+<div>
+    <input type="button" value="Check Out Selected" data-bind="click: checkoutMany" />
 </div>
+<div>
+    <input type="text" data-bind="value: title" />
+    <input type="button" value="Add Movie" data-bind="click: createMovie" />
+</div>
+<div>
+    <p data-bind="visible: errorMessage">Error: <span data-bind="text: errorMessage"></span></p>
+</div>
+
+@Scripts.Render("~/bundles/knockoutjs")
+@Scripts.Render("~/bundles/documents")
