--- a/PocOData/Views/Shared/_Layout.cshtml
+++ b/PocOData/Views/Shared/_Layout.cshtml
@@ -27,14 +27,11 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year</p>
-        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    
+    @Scripts.Render("~/bundles/knockoutjs")
+    @Scripts.Render("~/bundles/documents")
 </body>
 </html>
